2004-03-09  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: made groups "use"able
	* rsvg-styles.c: changed inheritance mechanism

2004-03-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Do something for clahey (bug 105316)
	
2004-03-07  Dom Lachowicz <cinamod@hotmail.com>

	* gtk-engine/*.[ch]: Theme engine now renders SVGs at their display
	size, thus cutting down on a lot of nasty raster scaling
	
2004-03-04  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Forward-port things from Gman
	* rsvg-styles.c: Forward-port patch from Dodji
	* *.c: Use new RsvgPropertyBag interface
	
2004-03-04  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Added final filter: feTile

2004-03-04  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Fixed feDiffuseLighting and feSpecular lighting to scale
	more consistantly

2004-03-03  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Fixed feDiffuseLighting and feSpecular lighting for small
	kernel length at the expense of speed, hopefully this can be optimised later.
	Fixed a "what the hell was I thinking?!" bug in filter dimentioning.
	
2004-03-02  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Added new filters: feDiffuseLighting and feSpecular lighting
	
2004-02-29  Dom Lachowicz <cinamod@hotmail.com>

	* moz-plugin/moz-plugin.c: Make Netscape/Mozilla plugin kind-of work
	
2004-02-29  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in:
	* Makefile.am:
	* test-display.c: Build + install 'rsvg-view'
	* rsvg-file-util.c:
	* rsvg-private.h: Export some things that I need in order to build rsvg-view
	
2004-02-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Added new filter: feImage
	
2004-02-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Added new filter: feTurbulence
	
2004-03-01  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Implemented bi-linear filtering for displacement